crates/strider-analyze/tests/snapshots/v3__ppc64be__floats__f32_compare.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v6" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "5" -> "v6" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v7" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "5" -> "v7" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "8" -> "5" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "9" [label="Region", shape=invhouse, fillcolor="#2a1a4a"];
  "v2" -> "9" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v6" -> "9" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v7" -> "9" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "10" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "9" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "11" -> "10" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "12" -> "10" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "13" -> "10" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "14" -> "10" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "15" -> "10" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "15" [label="init\nf2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "14" [label="φ f1", shape=house, fillcolor="#163030"];
  "9" -> "14" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "16" -> "14" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "17" -> "14" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "17" -> "14" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "17" [label="bitcast\nf64 → u64", shape=box, fillcolor="#302018"];
  "18" -> "17" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "18" [label="FloatToFloat\nf32 → f64", shape=box, fillcolor="#302018"];
  "19" -> "18" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "19" [label="FloatToFloat\nf64 → f32", shape=box, fillcolor="#302018"];
  "20" -> "19" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "20" [label="bitcast\nu64 → f64", shape=box, fillcolor="#302018"];
  "15" -> "20" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "16" [label="bitcast\nf64 → u64", shape=box, fillcolor="#302018"];
  "21" -> "16" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "21" [label="FloatToFloat\nf32 → f64", shape=box, fillcolor="#302018"];
  "19" -> "21" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "13" [label="init\nr4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "12" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "22" -> "12" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "22" [label="φ Val", shape=house, fillcolor="#163030"];
  "9" -> "22" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "23" -> "22" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "23" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "24" -> "22" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "24" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "25" -> "22" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "25" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "11" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "26" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "26" [label="φ Mem", shape=house, fillcolor="#163030"];
  "9" -> "26" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "27" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "28" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "29" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "29" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "30" -> "29" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v31" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v31" -> "29" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "32" -> "29" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "32" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "30" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "33" -> "30" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v34" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v34" -> "30" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "35" -> "30" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "35" [label="bitcast\nf32 → u32", shape=box, fillcolor="#302018"];
  "19" -> "35" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "33" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "36" -> "33" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v37" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v37" -> "33" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "38" -> "33" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "38" [label="bitcast\nf32 → u32", shape=box, fillcolor="#302018"];
  "39" -> "38" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "39" [label="FloatToFloat\nf64 → f32", shape=box, fillcolor="#302018"];
  "40" -> "39" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "40" [label="bitcast\nu64 → f64", shape=box, fillcolor="#302018"];
  "41" -> "40" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "41" [label="init\nf1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "36" [label="MemPartition[MemPartitionId(0)]", shape=trapezium, fillcolor="#3a1a4a"];
  "42" -> "36" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "42" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "28" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "30" -> "28" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v43" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v43" -> "28" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "44" -> "28" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "44" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "27" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "30" -> "27" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v45" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v45" -> "27" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "46" -> "27" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "46" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "8" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "47" -> "8" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "47" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "48" -> "47" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "49" -> "47" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "49" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "48" [label="ShiftRight:u8", shape=box, fillcolor="#2d2d2d"];
  "50" -> "48" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "51" -> "48" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "51" [label="const 0x2:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "50" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "52" -> "50" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "53" -> "50" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "53" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "54" -> "53" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "55" -> "53" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "55" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "56" -> "55" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "56" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "57" -> "56" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "57" [label="Equal\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "18" -> "57" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "18" -> "57" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "54" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "58" -> "54" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "58" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "59" -> "58" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "59" [label="Equal\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "60" -> "59" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "60" -> "59" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "60" [label="FloatToFloat\nf32 → f64", shape=box, fillcolor="#302018"];
  "39" -> "60" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "52" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "61" -> "52" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "62" -> "52" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "62" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "63" -> "62" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "64" -> "62" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "64" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "63" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "65" -> "63" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "65" [label="Equal\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "60" -> "65" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "18" -> "65" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "61" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "66" -> "61" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "67" -> "61" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "67" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "68" -> "67" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "69" -> "67" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "69" [label="const 0x2:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "68" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "70" -> "68" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "70" [label="Less\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "18" -> "70" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "60" -> "70" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "66" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "71" -> "66" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "72" -> "66" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "72" [label="const 0x3:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "71" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "73" -> "71" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "73" [label="Less\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "60" -> "73" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "18" -> "73" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "4" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "74" -> "4" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "74" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "75" -> "74" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "76" -> "74" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "76" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "75" [label="ShiftRight:u8", shape=box, fillcolor="#2d2d2d"];
  "77" -> "75" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "78" -> "75" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "78" [label="const 0x3:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "77" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "79" -> "77" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "80" -> "77" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "80" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "81" -> "80" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "82" -> "80" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "82" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "83" -> "82" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "83" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "84" -> "83" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "84" [label="Equal\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "21" -> "84" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "21" -> "84" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "81" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "85" -> "81" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "85" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "86" -> "85" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "86" [label="Equal\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "87" -> "86" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "87" -> "86" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "87" [label="FloatToFloat\nf32 → f64", shape=box, fillcolor="#302018"];
  "39" -> "87" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "79" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "88" -> "79" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "89" -> "79" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "89" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "90" -> "89" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "91" -> "89" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "91" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "90" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "92" -> "90" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "92" [label="Equal\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "87" -> "92" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "21" -> "92" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "88" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "93" -> "88" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "94" -> "88" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "94" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "95" -> "94" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "96" -> "94" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "96" [label="const 0x2:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "95" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "97" -> "95" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "97" [label="Less\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "21" -> "97" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "87" -> "97" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "93" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "98" -> "93" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "99" -> "93" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "99" [label="const 0x3:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "98" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "100" -> "98" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "100" [label="Less\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "87" -> "100" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "21" -> "100" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
}
